# deep-research-agent

./: .gitignore  README.md  actions.py  batch.py  main.py  multi_agent_main.py  prompts.py  pyproject.toml  questions.txt  tool_discovery.py  utils.py
agents/: __init__.py  base_agent.py
agents/orchestrator/: agent.py
agents/reasoning_agent/: __init__.py  agent.py
agents/search_agent/: agent.py
tools/: __init__.py  actions.py  discovery.py
